[package]
name = "bit-vec"
version = "0.6.3"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A vector of bits"
repository = "https://github.com/contain-rs/bit-vec"
homepage = "https://github.com/contain-rs/bit-vec"
documentation = "https://contain-rs.github.io/bit-vec/bit_vec"
keywords = ["data-structures", "bitvec", "bitmask", "bitmap", "bit"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
#[dev-dependencies]
#serde_json = "1.0"
#rand = "0.7"
#rand_xorshift = "0.2"

[features]
default = ["std","mesalock_sgx"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
std = []
mesalock_sgx = ["sgx_tstd"]